infra: preparação para deploy em produção
- Docker: Dockerfile multi-stage para backend (JDK 21 Alpine) e frontend (Node + Nginx)
- docker-compose.yml com PostgreSQL, backend, frontend e Nginx reverse proxy
- Nginx: reverse proxy com rate limiting no login, security headers, SPA routing
- application-prod.yml: todas configs externalizadas via env vars
- SecurityConfig: CORS dinâmico via app.cors.allowed-origins
- .env.example: documentação das variáveis necessárias
- Healthchecks configurados em todos os serviços